# gitlab_trackr

./: .gitignore  .goreleaser.yaml  CLAUDE.md  Cargo.toml  README.md
.claude/skills/config-key/: SKILL.md
.claude/skills/interface-change/: SKILL.md
.claude/skills/test-patterns/: SKILL.md
.claude/skills/verify/: SKILL.md
.github/workflows/: go-binding.yml  release.yml
clients/go/: README.md  client.go  doc.go  example_test.go  gen.go  go.mod  orgthehostergitlabtrackrd.go
gitlab-trackr-api/: Cargo.toml  README.md
gitlab-trackr-api/src/: lib.rs
gitlab-trackr-api/varlink/: org.thehoster.gitlab.trackrd.varlink
gitlab-trackrd/: Cargo.toml  README.md
gitlab-trackrd/benches/: handlers.rs  search.rs  storage.rs
gitlab-trackrd/benches/support/: mod.rs
gitlab-trackrd/docs/: benchmarks.md  varlink_interface.md
gitlab-trackrd/packaging/: gitlab-trackrd.service
gitlab-trackrd/src/: boards.rs  cache.rs  config.rs  db.rs  error.rs  gitlab.rs  handlers.rs  history.rs  lib.rs  main.rs  queue.rs  reconnect.rs  refresh_meta.rs  reload.rs  search.rs  secrets.rs  server.rs  service.rs
gitlab-trackrd/src/handlers/: mod.rs  refresh.rs  search_sync.rs  tests.rs  varlink.rs
gitlab_trackr_api/: Cargo.toml  README.md  build.rs
gitlab_trackr_api/src/: lib.rs
gitlab_trackrd/: .goreleaser.yaml  Cargo.toml  README.md  build.rs
gitlab_trackrd/docs/: varlink_interface.md
gitlab_trackrd/packaging/: gitlab-trackrd.service  gitlab-trackrd.socket  gitlab_trackrd.service  gitlab_trackrd.socket
gitlab_trackrd/src/: config.rs  daemon.rs  error.rs  gl.rs  main.rs  service.rs  utils.rs
tt-cli/: Cargo.toml  README.md
tt-cli/completions/: _tt  tt.bash  tt.fish  tt.yaml
tt-cli/src/: cli.rs  client.rs  config.rs  friendly.rs  main.rs  refspec.rs  state.rs
tt-cli/src/cmd/: assign.rs  close.rs  history.rs  hook.rs  list.rs  log.rs  login.rs  logout.rs  mod.rs  project.rs  prompt.rs  queue.rs  refresh.rs  search.rs  tick.rs  unassign.rs  whoami.rs
tt-cli/src/hooks/: fish.txt  nu.txt  zsh.txt
tt_cli/: .goreleaser.yaml  Cargo.toml  README.md  build.rs
tt_cli/src/: cli.rs  client.rs  config.rs  main.rs
tt_cli/src/cmd/: config.rs  log.rs  tick.rs
tt_cli/src/hooks/: bash.txt  nu.txt
