[workspace]
resolver = "3"
members = ["gitlab-trackr-api","gitlab-trackrd","tt-cli"]

[workspace.package]
edition = "2024"
version = "0.7.1"
license = "GPL-3.0-only"

[workspace.dependencies]
# Shared error / serde / async core
tokio = { version = "1", features = ["macros", "signal", "time", "sync"] }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"

# External APIs
gitlab = "0.1900"
gitlab-trackr-api = { path = "./gitlab-trackr-api", version = "0.8.0" }
varlink = { version = "13.0", features = ["tokio"] }
varlink_generator = "13.0"
dirs = "6"
http = "1"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }

# Local storage
notify = "8"
redb = "4.1"
security-framework = "3.7"
security-framework-sys = "2.17"
oo7 = { version = "0.6", features = ["tracing"] }

# CLI
clap = { version = "4.6", features = ["derive", "wrap_help"] }
inquire = "0.9"
confique = { version = "0.4.0", default-features = false, features = ["toml"] }
clap_complete = "4"
carapace_spec_clap = "1"
