[package]
name = "gitlab-trackr-api"
version = "0.9.0"
edition.workspace = true
license = "MIT OR Apache-2.0"

[build-dependencies]
varlink_generator.workspace = true

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_derive.workspace = true
serde_json.workspace = true
varlink.workspace = true
