[package]
name = "gitlab-trackrd"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
gitlab.workspace = true
redb.workspace = true
varlink.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dirs.workspace = true
http.workspace = true
async-trait.workspace = true
gitlab-trackr-api.workspace = true
chrono.workspace = true

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt", "test-util"] }
