[package]
name = "gitlab-trackrd"
version.workspace = true
edition.workspace = true
license.workspace = true
default-run = "gitlab-trackrd"

[dependencies]
gitlab.workspace = true
notify.workspace = true
fjall.workspace = true
varlink.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dirs.workspace = true
http.workspace = true
async-trait.workspace = true
gitlab-trackr-api.workspace = true
chrono.workspace = true
confique.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = { workspace = true, features = ["OSX_10_15"] }
security-framework-sys = { workspace = true, features = ["OSX_10_15"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
oo7 = { workspace = true }

[dev-dependencies]
criterion = { version = "0.7", features = ["async_tokio", "html_reports"] }
proptest.workspace = true
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt", "test-util"] }
url = "2"

[[bench]]
name = "search"
harness = false

[[bench]]
name = "storage"
harness = false

[[bench]]
name = "handlers"
harness = false
