[package]
name = "gitlab_trackr_api"
version = "0.1.0"
edition.workspace = true
license = "MIT OR Apache-2.0"

[build-dependencies]
varlink_generator.workspace = true

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_derive.workspace = true
serde_json.workspace = true
varlink.workspace = true
