[package]
name = "gitlab_trackrd"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"

[dependencies]
gitlab = "0.1811"
redb = "4.1.0"
varlink = { version = "13.0", features = ["tokio"] }
tokio = { version = "1", features = ["full"] }
serde = "1"
# Required explicitly for gitlab types
serde_derive = "1"
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5"
http = "1"
async-trait = "0.1.89"

[build-dependencies]
varlink_generator = "13.0"
