[package]
name = "tt-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "tt"
path = "src/main.rs"

[build-dependencies]
clap.workspace = true
clap_complete.workspace = true
carapace_spec_clap.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
confique.workspace = true
dirs.workspace = true
gitlab-trackr-api.workspace = true
inquire.workspace = true
open = "5"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
varlink.workspace = true
