[package]
name = "tt_cli"
version = "0.2.2"
edition = "2024"

[[bin]]
name = "tt"
path = "src/main.rs"

[build-dependencies]
clap = { version = "4.6", features = ["derive"] }
clap_complete = "4"
clap_complete_nushell = "4"

[dependencies]
anyhow = "1"
clap = { version = "4.6", features = ["derive"] }
confique = { version = "0.4.0", default-features = false, features = ["toml"] }
dirs = "5"
gitlab_trackr_api = { path = "../gitlab_trackr_api", version = "0.1.0" }
inquire = "0.9.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
varlink = { version = "13.0", features = ["tokio"] }
